log
Thu Apr 16 08:05:14 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
d00afa1
Thu Apr 16 08:33:53 PM UTC 2026: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:51:65: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   51 |         nuevoMapa->buckets = (Pair**) malloc(sizeof * capacity (pair*));
      |                                                                 ^~~~
      |                                                                 Pair
hashmap.c:51:65: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:51:70: error: expected expression before ‘)’ token
   51 |         nuevoMapa->buckets = (Pair**) malloc(sizeof * capacity (pair*));
      |                                                                      ^
hashmap.c:51:55: error: called object ‘capacity’ is not a function or function pointer
   51 |         nuevoMapa->buckets = (Pair**) malloc(sizeof * capacity (pair*));
      |                                                       ^~~~~~~~
hashmap.c:47:26: note: declared here
   47 | HashMap * createMap(long capacity) {
      |                     ~~~~~^~~~~~~~
0412d94
Thu Apr 16 08:35:44 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:51:65: error: expected expression before ‘Pair’
   51 |         nuevoMapa->buckets = (Pair**) malloc(sizeof * capacity (Pair*));
      |                                                                 ^~~~
hashmap.c:51:55: error: called object ‘capacity’ is not a function or function pointer
   51 |         nuevoMapa->buckets = (Pair**) malloc(sizeof * capacity (Pair*));
      |                                                       ^~~~~~~~
hashmap.c:47:26: note: declared here
   47 | HashMap * createMap(long capacity) {
      |                     ~~~~~^~~~~~~~
7e5a857
Thu Apr 16 08:37:00 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:51:65: error: expected expression before ‘Pair’
   51 |         nuevoMapa->buckets = (Pair**) malloc(sizeof * capacity (Pair *));
      |                                                                 ^~~~
hashmap.c:51:55: error: called object ‘capacity’ is not a function or function pointer
   51 |         nuevoMapa->buckets = (Pair**) malloc(sizeof * capacity (Pair *));
      |                                                       ^~~~~~~~
hashmap.c:47:26: note: declared here
   47 | HashMap * createMap(long capacity) {
      |                     ~~~~~^~~~~~~~
2ed869e
Thu Apr 16 08:37:29 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
a9ae389
Thu Apr 16 08:44:29 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
3e99c81
Mon Apr 20 02:07:37 AM UTC 2026: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  5|4
total_score: 20/60
ff05031
Mon Apr 20 02:15:32 AM UTC 2026: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  8|3
total_score: 30/60
5da6948
Mon Apr 20 02:18:06 AM UTC 2026: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  8|3
total_score: 30/60
2553182
Mon Apr 20 02:27:00 AM UTC 2026: 
 tests:  8|3
total_score: 30/60
ad701e1
Mon Apr 20 02:27:19 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 40/60
fd44a59
Mon Apr 20 02:31:35 AM UTC 2026: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  12|2
total_score: 40/60
2eefb64
Mon Apr 20 02:33:19 AM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘firstMap’:
hashmap.c:161:40: error: ‘maps’ undeclared (first use in this function); did you mean ‘map’?
  161 |         if (map->buckets[i] != NULL && maps->buckets[i]-> != NULL){
      |                                        ^~~~
      |                                        map
hashmap.c:161:40: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:161:59: error: expected identifier before ‘!=’ token
  161 |         if (map->buckets[i] != NULL && maps->buckets[i]-> != NULL){
      |                                                           ^~
hashmap.c: In function ‘nextMap’:
hashmap.c:177:40: error: ‘maps’ undeclared (first use in this function); did you mean ‘map’?
  177 |         if (map->buckets[i] != NULL && maps->buckets[i]-> != NULL){
      |                                        ^~~~
      |                                        map
hashmap.c:177:59: error: expected identifier before ‘!=’ token
  177 |         if (map->buckets[i] != NULL && maps->buckets[i]-> != NULL){
      |                                                           ^~
bff7858
Mon Apr 20 02:33:33 AM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘firstMap’:
hashmap.c:161:58: error: expected identifier before ‘!=’ token
  161 |         if (map->buckets[i] != NULL && map->buckets[i]-> != NULL){
      |                                                          ^~
hashmap.c: In function ‘nextMap’:
hashmap.c:177:58: error: expected identifier before ‘!=’ token
  177 |         if (map->buckets[i] != NULL && map->buckets[i]-> != NULL){
      |                                                          ^~
40910ab
Mon Apr 20 02:33:49 AM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 50/60
eb51d51
Mon Apr 20 02:43:33 AM UTC 2026: 
 hashmap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:211:5: error: ‘maps’ undeclared (first use in this function); did you mean ‘map’?
  211 |     maps->buckets = malloc(map->capacity * sizeof(Pair *));
      |     ^~~~
      |     map
hashmap.c:211:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:219:18: error: expected ‘;’ before ‘for’
  219 |     map->size = 0 //en 0 para que vaya incrementando al volver a insertar los datos
      |                  ^
      |                  ;
......
  222 |     for (long i=0; i < oldCapacity; i++){
      |     ~~~           
hashmap.c:207:12: error: unused variable ‘oldBuckets’ [-Werror=unused-variable]
  207 |     Pair** oldBuckets = map->buckets;
      |            ^~~~~~~~~~
hashmap.c:206:10: error: unused variable ‘oldCapacity’ [-Werror=unused-variable]
  206 |     long oldCapacity = map->capacity;
      |          ^~~~~~~~~~~
cc1: all warnings being treated as errors
28854be
Mon Apr 20 02:44:11 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:211:5: error: ‘maps’ undeclared (first use in this function); did you mean ‘map’?
  211 |     maps->buckets = malloc(map->capacity * sizeof(Pair *));
      |     ^~~~
      |     map
hashmap.c:211:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:224:58: error: ‘oldBuckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
  224 |             insertMap(map, oldBuckets[i]->key, oldBuckets->value);
      |                                                          ^~
      |                                                (*        )
1c1adb1
Mon Apr 20 02:44:27 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:211:5: error: ‘maps’ undeclared (first use in this function); did you mean ‘map’?
  211 |     maps->buckets = malloc(map->capacity * sizeof(Pair *));
      |     ^~~~
      |     map
hashmap.c:211:5: note: each undeclared identifier is reported only once for each function it appears in
1110e07
